# jiminy

./: .pre-commit-config.yaml  Cargo.toml  NOTES.md  README.md  rust-toolchain.toml
account/: Cargo.toml
account/src/: consts.rs  deser.rs  lib.rs
account/src/account/: mod.rs
account/src/account_types/: account.rs  account_mut.rs  mod.rs  raw.rs  unsafe_account.rs
account/src/deser/: mod.rs  saving.rs
account/src/handle/: abr.rs  account_handles.rs  accounts.rs  mod.rs
bs58-utils/: Cargo.toml
bs58-utils/src/: lib.rs
cpi/: Cargo.toml
cpi/src/: cpi_account.rs  cpi_account_meta.rs  instruction.rs  lib.rs
doctest/: Cargo.toml  README.md
entrypoint/: Cargo.toml
entrypoint/src/: lib.rs  panic.rs
entrypoint/src/allocator/: allogator.rs  bump.rs  mod.rs  no.rs
log/: Cargo.toml
log/src/: lib.rs
pda/: Cargo.toml
pda/src/: lib.rs  seed.rs  seed_arr.rs  signer.rs
prog-interface/: README.md
prog-interface/system/: Cargo.toml  README.md
prog-interface/system/src/: lib.rs
prog-interface/system/src/instructions/: assign.rs  create_account.rs  internal_utils.rs  mod.rs  transfer.rs
program-error/: Cargo.toml
program-error/src/: lib.rs
return-data/: Cargo.toml
return-data/src/: lib.rs
syscall/: Cargo.toml
syscall/src/: definitions.rs  lib.rs
sysvar/clock/: Cargo.toml
sysvar/clock/src/: lib.rs
sysvar/instructions/: Cargo.toml
sysvar/instructions/src/: lib.rs
sysvar/rent/: Cargo.toml
sysvar/rent/src/: lib.rs
sysvar/sysvar/: Cargo.toml
sysvar/sysvar/src/: lib.rs
test-programs/: README.md
test-programs/append/: Cargo.toml
test-programs/append/src/: lib.rs
test-programs/append/tests/: test.rs
test-programs/clock-test/: Cargo.toml
test-programs/clock-test/src/: lib.rs
test-programs/clock-test/tests/: test.rs
test-programs/close/: Cargo.toml
test-programs/close/src/: lib.rs
test-programs/close/tests/: test.rs
test-programs/cpi-sys-transfer/: Cargo.toml
test-programs/cpi-sys-transfer/src/: lib.rs
test-programs/cpi-sys-transfer/tests/: test.rs
test-programs/echo-return-data/: Cargo.toml
test-programs/echo-return-data/src/: lib.rs
test-programs/echo-return-data/tests/: test.rs
test-programs/instructions-test/: Cargo.toml
test-programs/instructions-test/src/: lib.rs
test-programs/instructions-test/tests/: test.rs
test-programs/log-hello-world/: Cargo.toml
test-programs/log-hello-world/src/: lib.rs
test-programs/log-hello-world/tests/: test.rs
test-programs/noop/: Cargo.toml
test-programs/noop/src/: lib.rs
test-programs/noop/tests/: test.rs
test-programs/pda-assign/: Cargo.toml
test-programs/pda-assign/src/: lib.rs
test-programs/pda-assign/tests/: test.rs
test-programs/realloc/: Cargo.toml
test-programs/realloc/src/: lib.rs
test-programs/realloc/tests/: test.rs
test-programs/rent-test/: Cargo.toml
test-programs/rent-test/src/: lib.rs
test-programs/rent-test/tests/: test.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
