[workspace]
resolver = "2"
members = [
    "account",
    "cpi",
    "entrypoint",
    "log",
    "pda",
    "prog-interface/*",
    "program-error",
    "return-data",
    "syscall",
    "sysvar/*",
    "test-programs/*",
    "test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[workspace.dependencies]
# runtime deps
# // set all to default-features = false and turn features
# // on in individual crates as required to reduce deps 
bs58 = { version = "^0.5", default-features = false }
const-crypto = { version = "^0.3", default-features = false }
generic-array-struct = { version = "=0.3.1-bc", default-features = false }

# dev deps
bincode = "^1"
bs58-fixed = { git = "https://github.com/igneous-labs/bs58-fixed.git", branch = "master" }
proptest = "^1"

## solana dev deps
# // grouping these tgt to deal with solana's dependency hell more conveniently
mollusk-svm = { version = "^0.1", default-features = false }
solana-account = { version = "^2", default-features = false }
solana-clock = { version = "^2", default-features = false }
solana-instruction = { version = "^2", default-features = false }
solana-instructions-sysvar = { version = "^2", default-features = false }
solana-logger = { version = "^2", default-features = false }
solana-pubkey = { version = "^2", default-features = false }
solana-rent = { version = "^2", default-features = false }
solana-sdk-ids= { version = "^2", default-features = false }
solana-system-program = { version = "^2", default-features = false }

# workspace members
jiminy-account = { path = "./account" }
jiminy-cpi = { path = "./cpi" }
jiminy-entrypoint = { path = "./entrypoint" }
jiminy-log = { path = "./log" }
jiminy-pda = { path = "./pda" }
jiminy-program-error = { path = "./program-error" }
jiminy-return-data = { path = "./return-data" }
jiminy-syscall = { path = "./syscall" }
jiminy-system-prog-interface = { path = "./prog-interface/system" }
jiminy-sysvar = { path = "./sysvar/sysvar" }
jiminy-sysvar-clock = { path = "./sysvar/clock" }
jiminy-sysvar-instructions = { path = "./sysvar/instructions" }
jiminy-sysvar-rent = { path = "./sysvar/rent" }
jiminy-test-utils = { path = "./test-utils" }
