[workspace]
resolver = "2"
members = [
    "account",
    "cpi",
    "doctest",
    "entrypoint",
    "log",
    "pda",
    "prog-interface/*",
    "program-error",
    "return-data",
    "syscall",
    "sysvar/*",
    "test-programs/*",
    "test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[workspace.dependencies]
# runtime deps
# // set all to default-features = false and turn features
# // on in individual crates as required to reduce deps 
bs58 = { version = "^0.5", default-features = false }
const-crypto = { version = "^0.3", default-features = false }
generic-array-struct = { version = "^0.3.1", default-features = false }

# dev deps
bincode = "^1"
expect-test = "^1"
five8 = "^0.2"
proptest = "^1"

# solana dev deps
# grouping these tgt to deal with solana's dependency hell more conveniently
mollusk-svm = { version = "^0.7", default-features = false }
solana-account = { version = "^3", default-features = false }
solana-clock = { version = "^3", default-features = false }
solana-instruction = { version = "^3", default-features = false }
solana-instructions-sysvar = { version = "^3", default-features = false }
solana-logger = { version = "^3", default-features = false }
solana-pubkey = { version = "^3", default-features = false }
solana-rent = { version = "^3", default-features = false }
solana-sdk-ids= { version = "^3", default-features = false }
solana-system-program = { version = "^3", default-features = false }

# workspace members
jiminy-account = { path = "./account" }
jiminy-cpi = { path = "./cpi" }
jiminy-entrypoint = { path = "./entrypoint" }
jiminy-log = { path = "./log" }
jiminy-pda = { path = "./pda" }
jiminy-program-error = { path = "./program-error" }
jiminy-return-data = { path = "./return-data" }
jiminy-syscall = { path = "./syscall" }
jiminy-system-prog-interface = { path = "./prog-interface/system" }
jiminy-sysvar = { path = "./sysvar/sysvar" }
jiminy-sysvar-clock = { path = "./sysvar/clock" }
jiminy-sysvar-instructions = { path = "./sysvar/instructions" }
jiminy-sysvar-rent = { path = "./sysvar/rent" }
jiminy-test-utils = { path = "./test-utils" }
