[package]
name = "jiminy-bs58-utils"
version.workspace = true
edition.workspace = true

[features]
default = []
std = ["bs58/std"]

[dependencies]
bs58 = { workspace = true, default-features = false }

[dev-dependencies]
bs58 = { workspace = true, features = ["std"] }
proptest = { workspace = true }
