[package]
name = "doctest"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[dev-dependencies]
jiminy-account = { workspace = true }
jiminy-cpi = { workspace = true }
jiminy-entrypoint = { workspace = true }
jiminy-pda = { workspace = true }
jiminy-program-error = { workspace = true }
jiminy-system-prog-interface = { workspace = true }
