[package]
name = "jiminy-sysvar-rent"
version.workspace = true
edition.workspace = true

[dependencies]
const-crypto = { workspace = true }
jiminy-program-error = { workspace = true }
jiminy-syscall = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
proptest = { workspace = true }
solana-rent = { workspace = true }
