[package]
name = "clock-test"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
default = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jiminy-entrypoint = { workspace = true }
jiminy-return-data = { workspace = true }
jiminy-sysvar-clock = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
jiminy-test-utils = { workspace = true }
mollusk-svm = { workspace = true }
proptest = { workspace = true }
solana-clock = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
