[package]
name = "echo-return-data"
version = "0.1.0"
edition.workspace = true

[features]
default = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jiminy-entrypoint = { workspace = true }
jiminy-return-data = { workspace = true }

[dev-dependencies]
jiminy-test-utils = { workspace = true }
mollusk-svm = { workspace = true }
proptest = { workspace = true }
solana-account = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-system-program = { workspace = true }
