[package]
name = "log-hello-world"
version = "0.1.0"
edition.workspace = true

[features]
default = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jiminy-bs58-utils = { workspace = true }
jiminy-entrypoint = { workspace = true }
jiminy-log = { workspace = true, features = ["std"] }

[dev-dependencies]
jiminy-test-utils = { workspace = true }
mollusk-svm = { workspace = true }
proptest = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
