[package]
name = "rent-test"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[features]
default = []
test-sbf = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jiminy-cpi = { workspace = true }
jiminy-entrypoint = { workspace = true }
jiminy-system-prog-interface = { workspace = true }
jiminy-sysvar-rent = { workspace = true }

[dev-dependencies]
jiminy-test-utils = { workspace = true }
mollusk-svm = { workspace = true }
proptest = { workspace = true }
solana-sdk = { workspace = true }
